--- a/Inhalt/Einleitung.tex
+++ b/Inhalt/Einleitung.tex
@@ -5,15 +5,15 @@ Das folgende Projekt ist mein IHK-Abschlussprojekt, welches im Rahmen meiner Aus
 
 \subsection{Vorstellung des Betriebs und meiner Selbst} 
 \label{sec:Vorstellung des Betriebs und meiner Selbst}
-Ich habe meine Ausbildung am 01.März 2017 bei der Spreitzenbarth Consultants GmbH angefangen. Einem kleinen Unternehmen mit 50 Mitarbeitern mit Fokus auf Supply Chain Management, dort habe ich hauptsächlich Web Anwendungen mit ASP.NET MVC und AngularJs  und Windows Applikationen mit C\# programmiert. Aufgrund einer Firmen Auflösung habe ich zum 01.06.2018 meinen Ausbildungsbetrieb gewechselt und bin zum Camelot ITLab gewechselt. Dort habe ich mich dann mit \ac{ABAP} und dem gesamten SAP Umfeld betätigt.
+Am 01. März 2017 habe ich meine Ausbildung bei der Spreitzenbarth Consultants GmbH begonnen, einem Unternehmen mit 50 Mitarbeitern und Fokus auf Supply Chain Management. Dort habe ich hauptsächlich Web Anwendungen mit ASP.NET MVC und AngularJs sowie Windows Applikationen mit C\# programmiert. Aufgrund der Firmen Auflösung musste ich meinen Ausbildungsbetrieb wechseln und bin seit 01. Juni 2018 bei der Camelot ITLab GmbH beschäftigt. Hier beschäftige ich mich mit dem gesamten SAP Umfeld und lerne die Programmiersprache \ac{ABAP}.
 
 \subsection{Projektziel} 
 \label{sec:Projektziel}
-Im SAP \ac{APO} bzw. im SAP \ac{ECC} hat der Planer die Möglichkeit Prozess-, Produktions- und Plan-Aufträge manuell anzulegen bzw. vorhandene Planaufträge zu editieren. Allerdings gibt es hier keine Möglichkeit eine Notiz oder eine Beschreibung zu hinterlegen. Das Projektziel ist die Erstellung von Programmen, die dem Planer ermöglichen, Kommentare	für Aufträge zu erstellen und anzusehen. Außerdem sollen bereits vorhandene Programm entsprechend erweitert werden, um dem Planer den bestmöglichen Komfort zu bieten. Da dieses Projekt ein internes Projekt ist, wurden alle Anforderungen in innerbetrieblichen Besprechungen ausgemacht.  Bei der Implementierung wird besonders darauf geachtet, einen leicht zu erweiternden Code zu produzieren, da später ein Kommentarverlauf hinzugefügt werden soll, sodass der Planer auch vorherige Versionen von Kommentaren anschauen kann. 
+Im SAP \ac{APO} bzw. im SAP \ac{ECC} hat der Planer die Möglichkeit, Prozess-, Produktions- und Plan-Aufträge manuell anzulegen bzw. vorhandene Planaufträge zu editieren. Allerdings gibt es hier keine Möglichkeit, dazu eine Notiz oder eine Beschreibung zu hinterlegen. Projektziel ist die Erstellung von Programmen, die es dem Planer ermöglichen, Kommentare	für Aufträge zu erstellen und anzusehen. Außerdem sollen bereits vorhandene Programme entsprechend erweitert werden, um den Planer bestmöglich zu Unterstützen. Da dieses Projekt ein internes Projekt ist, wurden alle Anforderungen in innerbetrieblichen Besprechungen erarbeitet. Bei der Implementierung wurde besonders darauf geachtet, einen leicht zu erweiternden Code zu produzieren, da in zukünftigen Versionen noch weiter Feature hinzugefügt werden solle, wie z.B. ein Kommentarverlauf, sodass der Planer auch vorherige Versionen von Kommentaren anschauen kann. 
 
 \subsection{Projektumfeld}
 \label{sec:Projektumfeld}
-Die Camelot ITLab GmbH ist eine im SAP-Umfeld tätige Unternehmensberatung, die sowohl funktionale als auch technische Implementierungen von Geschäftsprozessen umsetzt.	Die Abteilung SCM Solution Development innerhalb der Camelot ITLab GmbH, in deren Umfeld	auch dieses Projekt umgesetzt wird, ist für die softwareseitige Implementierung technischer	Anforderungen zuständig. Der Fokus der Abteilung liegt auf Supply Chain Management, im Speziellen Produktions- und Feinplanung.
+Die Camelot ITLab GmbH ist eine im SAP-Umfeld tätige Unternehmensberatung, die sowohl funktionale als auch technische Implementierungen von Geschäftsprozessen umsetzt.	Die Abteilung SCM Solution Development innerhalb der Camelot ITLab GmbH, in deren Umfeld	auch dieses Projekt umgesetzt wurde, ist für die softwareseitige Implementierung technischer	Anforderungen zuständig. Der Schwerpunkt der Abteilung ist Supply Chain Management, im Speziellen Produktions- und Feinplanung.
 
 \subsection{Projektbeteiligte Personen} 
 \label{sec:Projektbeteiligte Personen}
