--- a/Tabellen/Projektkosten.tex
+++ b/Tabellen/Projektkosten.tex
@@ -1,11 +1,11 @@
 \begin{tabu}{lllllll}
 \rowfont{\bfseries\leavevmode\color{headingfont}}\rowcolor{heading}\textbf{Vorgang} & \textbf{Mitarbeiter} & \textbf{Azubi} & \textbf{Zeit} & \textbf{Personal} & \textbf{Ressourcen} & \textbf{Gesamt} \\
-Anforderungsaufnahme & 2 & 1 & 2h & 64 & 60 & 124 \\
-\rowcolor{odd}Ressourcen Entwicklung & \ & 1 & 39h & 273 & 390 & 663 \\ 
-Testphase & \ & 1 & 3h & 21 & 30 & 51 \\
-\rowcolor{odd}Code Reviews & 2 & 1 & 3h & 171 & 90 & 281 \\
-Fazit und Dokumentation & \ & 1 & 23h & 161 & 230 & 391 \\
+Anforderungsaufnahme & 2 & 1 & 2 h & 114 € & 60 € & 124 € \\
+\rowcolor{odd}Ressourcen Entwicklung & \ & 1 & 39 h & 273 € & 390 € & 663 € \\ 
+Testphase & \ & 1 & 3 h & 21 € & 30 € & 51 € \\
+\rowcolor{odd}Code Reviews & 2 & 1 & 3 h & 171 € & 90 € & 281 € \\
+Fazit und Dokumentation & \ & 1 & 23 h & 161 € & 230 € & 391 € \\
 \hline
 \hline
-\rowcolor{odd}\textbf{Gesamt} & & & & & & \textbf{1510€} \\
+\rowcolor{odd}\textbf{Gesamt} & & & & & & \textbf{1510 €} \\
 \end{tabu}
